--- a/App.xaml
+++ b/App.xaml
@@ -1,10 +1,9 @@
-﻿<Application x:Class="InstaMessenger.App"
+﻿<Application x:Class="InstantMessenger.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:InstaMessenger"
-             StartupUri="LoginWindow.xaml">
+             xmlns:local="clr-namespace:InstantMessenger"
+             StartupUri="Views/LoginWindow.xaml">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
-
